Fix no activity message alignment

--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,13 @@ button.toggle.collapsed {
   padding: 1em;
   color: #aaa;
 }
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #aaa;
+  font-size: 14px;
+  text-transform: uppercase;
+}
